--- a/packages/mobile/src/progress/src/progress.less
+++ b/packages/mobile/src/progress/src/progress.less
@@ -1,6 +1,6 @@
 :root,
 :host {
-    --pk-progress-stroke-height: 3px;
+    --pk-progress-stroke-height: 2px;
     --pk-progress-track-background: var(--pk-border-color);
     --pk-progress-stroke-background: var(--pk-primary-color);
     --pk-progress-transition-duration: var(--pk-transition-duration);
@@ -16,18 +16,6 @@
     background: var(--pk-progress-track-background);
     border-radius: 99999px;
     position: relative;
-
-    &--square {
-        border-radius: 0;
-
-        .@{namespace}__stroke {
-            border-radius: 0;
-        }
-
-        .@{namespace}__pivot {
-            border-radius: 0;
-        }
-    }
 
     &__stroke {
         left: 0;
@@ -50,8 +38,21 @@
         font-size: var(--pk-progress-pivot-font-size);
         background: var(--pk-progress-stroke-background);
         border-radius: 9999px;
-        transition-property: left;
+        transition-property: left, transform;
         transition-duration: var(--pk-progress-transition-duration);
         transition-timing-function: var(--pk-transition-timing-function-in);
+        width: max-content;
+    }
+
+    &--square {
+        border-radius: 0;
+
+        .@{namespace}__stroke {
+            border-radius: 0;
+        }
+
+        .@{namespace}__pivot {
+            border-radius: 0;
+        }
     }
 }
