✨ feat: Field支持自适应高度

--- a/packages/mobile/src/field/src/field.less
+++ b/packages/mobile/src/field/src/field.less
@@ -64,6 +64,15 @@
 
                 }
 
+                .@{namespace}__textarea {
+                    resize: none;
+                    box-sizing: border-box;
+
+                    &::-webkit-scrollbar {
+                        display: none;
+                    }
+                }
+
                 &.@{namespace}--margin {
                     margin-right: var(--pk-field-margin);
                 }
