✨ feat: CellGroup组件新增属性
CellGroup组件新增last-hide-border属性

--- a/packages/mobile/src/cell/src/cell-group.less
+++ b/packages/mobile/src/cell/src/cell-group.less
@@ -8,6 +8,7 @@
 }
 
 @namespace: pk-cell-group;
+@cell-namespace: pk-cell;
 
 .@{namespace} {
     &__header {
@@ -24,4 +25,16 @@
             flex-shrink: 0;
         }
     }
+
+    &--border {
+        .@{namespace}__content {
+            .@{cell-namespace} {
+
+                &:last-child::after {
+                    display: initial;
+                }
+            }
+        }
+    }
+
 }
