✨ feat: Cell组件最后一项下边框的显示逻辑

--- a/packages/mobile/src/cell/src/cell-group.less
+++ b/packages/mobile/src/cell/src/cell-group.less
@@ -26,6 +26,15 @@
         }
     }
 
+
+    .@{namespace}__content {
+        .@{cell-namespace} {
+            &:last-child::after {
+                display: none;
+            }
+        }
+    }
+
     &--border {
         .@{namespace}__content {
             .@{cell-namespace} {
