--- a/packages/mobile/src/cell/src/cell.less
+++ b/packages/mobile/src/cell/src/cell.less
@@ -11,9 +11,13 @@
     --pk-cell-bottom-color: var(--pk-text-color-secondary);
     --pk-cell-required-color: var(--pk-error-color);
 
+    --pk-cell-background: var(--pk-bg-color);
+
     --pk-cell-title-line-height: 1.375;
     --pk-cell-value-line-height: 1.375;
     --pk-cell-bottom-line-height: 1.5;
+
+    --pk-cell-disabled-opacity: var(--pk-disabled-opacity);
 }
 
 @namespace: pk-cell;
@@ -23,6 +27,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
+    background: var(--pk-cell-background);
 
     &--link {
         &.@{namespace}--disabled {
@@ -56,10 +61,6 @@
         bottom: 0;
         border-bottom: var(--pk-border-width-m) solid var(--pk-border-color);
         transform: scaleY(0.5);
-    }
-
-    &:last-child::after {
-        display: none;
     }
 
     &__top {
@@ -120,6 +121,18 @@
                     padding: 0;
                 }
             }
+        }
+    }
+
+    &--disabled {
+        cursor: not-allowed;
+
+        .@{namespace}__top {
+            opacity: var(--pk-cell-disabled-opacity);
+        }
+
+        .@{namespace}__bottom {
+            opacity: var(--pk-cell-disabled-opacity);
         }
     }
 
