--- a/packages/uni-vue3/src/pk-ui/theme/index.less
+++ b/packages/uni-vue3/src/pk-ui/theme/index.less
@@ -21,27 +21,31 @@ page {
 
 
     // 边距
-    --pk-padding-s: 8rpx;
-    --pk-padding-m: 16rpx;
-    --pk-padding-l: 24rpx;
+    --pk-padding-s: 4px;
+    --pk-padding-m: 8px;
+    --pk-padding-l: 12px;
+
+    --pk-margin-s: 4px;
+    --pk-margin-m: 8px;
+    --pk-margin-l: 12px;
 
     //圆角
     --pk-radius-min: 0;
-    --pk-radius-s: 4rpx;
-    --pk-radius-m: 8rpx;
-    --pk-radius-l: 16rpx;
-    --pk-radius-max: 99999999999rpx;
+    --pk-radius-s: 2px;
+    --pk-radius-m: 4px;
+    --pk-radius-l: 8px;
+    --pk-radius-max: 9999999px;
 
     // 字体
-    --pk-font-size-xs: 26rpx;
-    --pk-font-size-s: 28rpx;
-    --pk-font-size-m: 32rpx;
-    --pk-font-size-l: 36rpx;
+    --pk-font-size-xs: 13px;
+    --pk-font-size-s: 14px;
+    --pk-font-size-m: 16px;
+    --pk-font-size-l: 18px;
 
     // 边框大小
-    --pk-border-width-s: 1.6rpx;
-    --pk-border-width-m: 2rpx;
-    --pk-border-width-l: 4rpx;
+    --pk-border-width-s: 0.8px;
+    --pk-border-width-m: 1px;
+    --pk-border-width-l: 2px;
 
     //字体颜色
     --pk-text-color: #333333;
@@ -57,11 +61,11 @@ page {
     //背景颜色
     --pk-bg-color: #FFFFFF;
     --pk-bg-invert: #000000;
+    --pk-inactive-bg-color: #b9bec5;
 
     --pk-overlay-bg-color: rgba(0, 0, 0, 0.7);
     --pk-toast-bg-color: rgba(0, 0, 0, 0.7);
     --pk-toast-text-color: var(--pk-text-color-invert);
-
 
     // 层级
     --pk-z-index-min: 1;
