--- a/packages/mobile/src/cell/src/cell.less
+++ b/packages/mobile/src/cell/src/cell.less
@@ -49,7 +49,7 @@
             border-color: var(--pk-bg-invert);
             border-radius: inherit;
             opacity: 0.05;
-            z-index: var(--pk-button-z-index-mask);
+            z-index: var(--pk-z-index-min-2);
         }
     }
 
