--- a/packages/uni-vue3/src/pk-ui/components/pk-button/pk-button.less
+++ b/packages/uni-vue3/src/pk-ui/components/pk-button/pk-button.less
@@ -1,27 +1,28 @@
-page {
-    --pk-button-line-height-xs: 1.1;
-    --pk-button-line-height-s: 1.2;
-    --pk-button-line-height-m: 1.7;
-    --pk-button-line-height-l: 2;
-    --pk-button-line-height-xl: 2.5;
-    --pk-button-line-height-sub: 1.53;
+@import '../../theme/index.less';
 
-    --pk-button-z-index-text: var(--pk-z-index-min);
-    --pk-button-z-index-mask: var(--pk-z-index-min-2);
+@pk-button-line-height-xs: 1.1;
+@pk-button-line-height-s: 1.2;
+@pk-button-line-height-m: 1.7;
+@pk-button-line-height-l: 2;
+@pk-button-line-height-xl: 2.5;
+@pk-button-line-height-sub: 1.53;
 
-    --pk-button-primary-background: var(--pk-primary-color);
-    --pk-button-primary-border-color: var(--pk-primary-color);
-    --pk-button-primary-text-color: var(--pk-primary-color);
-}
+@pk-button-z-index-text: @pk-z-index-min;
+@pk-button-z-index-mask: @pk-z-index-min-2;
+
+@pk-button-primary-background: @pk-primary-color;
+@pk-button-primary-border-color: @pk-primary-color;
+@pk-button-primary-text-color: @pk-primary-color;
 
 @namespace: pk-button;
 
 .@{namespace} {
     position: relative;
     cursor: pointer;
-    border-radius: var(--pk-radius-m);
+    border-radius: @pk-radius-m;
     box-shadow: none;
-    color: var(--pk-text-color-invert);
+    color: @pk-text-color-invert;
+    height: max-content;
 
     &::after {
         position: absolute;
@@ -30,13 +31,13 @@ page {
         width: 100%;
         height: 100%;
         transform: translate(-50%, -50%);
-        background: var(--pk-bg-color);
+        background: @pk-bg-color;
         border: inherit;
-        border-color: var(--pk-bg-color);
+        border-color: @pk-bg-color;
         border-radius: inherit;
         opacity: 0;
         content: ' ';
-        z-index: var(--pk-button-z-index-mask);
+        z-index: @pk-button-z-index-mask;
     }
 
     &:active::after {
@@ -49,45 +50,44 @@ page {
         justify-content: center;
 
         .@{namespace}__loading {
-            --pk-loading-color: currentColor;
-            --pk-loading-text-color: currentColor;
-            margin: 0 var(--pk-margin-s) 0 0;
+            color: currentColor;
+            margin: 0 @pk-margin-s 0 0;
         }
 
         .@{namespace}__content {
             .@{namespace}__text {
                 position: relative;
-                z-index: var(--pk-button-z-index-text);
+                z-index: @pk-button-z-index-text;
             }
 
             .@{namespace}-sub__text {
-                font-size: var(--pk-font-size-xs);
-                line-height: var(--pk-button-line-height-sub);
+                font-size: @pk-font-size-xs;
+                line-height: @pk-button-line-height-sub;
                 opacity: .6;
+                white-space: normal;
             }
         }
     }
 
+    &--primary {
+        background: @pk-button-primary-background;
+        border: @pk-border-width-s solid @pk-button-primary-border-color;
+    }
+
     &--danger {
-        --pk-button-primary-background: var(--pk-error-color);
-        --pk-button-primary-border-color: var(--pk-error-color);
-        --pk-button-primary-text-color: var(--pk-error-color);
+        background: @pk-error-color;
+        border: @pk-border-width-s solid @pk-error-color;
     }
 
     &--warning {
-        --pk-button-primary-background: var(--pk-warning-color);
-        --pk-button-primary-border-color: var(--pk-warning-color);
-        --pk-button-primary-text-color: var(--pk-warning-color);
+        background: @pk-warning-color;
+        border: @pk-border-width-s solid @pk-warning-color;
     }
 
-    &--primary {
-        background: var(--pk-button-primary-background);
-        border: var(--pk-border-width-s) solid var(--pk-button-primary-border-color);
-    }
 
     &--hazy {
-        border: var(--pk-border-width-s) solid var(--pk-button-primary-border-color);
-        color: var(--pk-button-primary-text-color);
+        border: @pk-border-width-s solid @pk-button-primary-border-color;
+        color: @pk-button-primary-text-color;
         background: inherit;
 
         &::before {
@@ -95,7 +95,7 @@ page {
             position: absolute;
             width: 100%;
             height: 100%;
-            background: var(--pk-button-primary-background);
+            background: @pk-button-primary-background;
             opacity: 0.2;
             top: 0;
             left: 0;
@@ -104,56 +104,56 @@ page {
     }
 
     &--outline {
-        border: var(--pk-border-width-s) solid var(--pk-border-color);
-        color: var(--pk-button-primary-text-color);
+        border: @pk-border-width-s solid @pk-border-color;
+        color: @pk-button-primary-text-color;
         background: inherit;
     }
 
     &--ghost {
-        border: var(--pk-border-width-s) solid var(--pk-button-primary-border-color);
-        color: var(--pk-button-primary-text-color);
+        border: @pk-border-width-s solid @pk-button-primary-border-color;
+        color: @pk-button-primary-text-color;
         background: inherit;
     }
 
     &--link {
         background: inherit;
-        border: var(--pk-border-width-s) solid transparent;
-        color: var(--pk-button-primary-text-color);
+        border: @pk-border-width-s solid transparent;
+        color: @pk-button-primary-text-color;
     }
 
 
     &--xs {
-        padding: var(--pk-padding-s);
-        font-size: var(--pk-font-size-s);
-        line-height: var(--pk-button-line-height-xs);
+        padding: @pk-padding-s;
+        font-size: @pk-font-size-s;
+        line-height: @pk-button-line-height-xs;
     }
 
     &--s {
-        padding: var(--pk-padding-s);
-        font-size: var(--pk-font-size-s);
-        line-height: var(--pk-button-line-height-s);
+        padding: @pk-padding-s;
+        font-size: @pk-font-size-s;
+        line-height: @pk-button-line-height-s;
     }
 
     &--m {
-        padding: var(--pk-padding-m);
-        font-size: var(--pk-font-size-m);
-        line-height: var(--pk-button-line-height-m);
+        padding: @pk-padding-m;
+        font-size: @pk-font-size-m;
+        line-height: @pk-button-line-height-m;
     }
 
     &--l {
-        padding: var(--pk-padding-m);
-        font-size: var(--pk-font-size-m);
-        line-height: var(--pk-button-line-height-l);
+        padding: @pk-padding-m;
+        font-size: @pk-font-size-m;
+        line-height: @pk-button-line-height-l;
     }
 
     &--xl {
-        padding: var(--pk-padding-m);
-        font-size: var(--pk-font-size-l);
-        line-height: var(--pk-button-line-height-xl);
+        padding: @pk-padding-m;
+        font-size: @pk-font-size-l;
+        line-height: @pk-button-line-height-xl;
     }
 
     &--round {
-        border-radius: var(--pk-radius-max);
+        border-radius: @pk-radius-max;
     }
 
     &--square {
@@ -166,11 +166,18 @@ page {
     }
 
     &--disabled {
-        opacity: var(--pk-disabled-opacity);
+        opacity: @pk-disabled-opacity;
 
         &::after {
             display: none;
         }
     }
 
+    &--text-color-invert {
+        color: @pk-text-color-invert;
+    }
+
+    &--text-color {
+        color: @pk-text-color;
+    }
 }
