--- a/packages/mobile/src/checkbox/src/checkbox-group.less
+++ b/packages/mobile/src/checkbox/src/checkbox-group.less
@@ -5,4 +5,10 @@
 
 @namespace: pk-checkbox-group;
 
-.@{namespace} {}
+.@{namespace} {
+    display: flex;
+
+    &--vertical {
+        flex-direction: column;
+    }
+}
