--- a/packages/mobile/src/radio/src/radio.less
+++ b/packages/mobile/src/radio/src/radio.less
@@ -44,6 +44,7 @@
             height: fit-content;
             background: none;
             border: none;
+            color: var(--pk-checkbox-label-color);
         }
     }
 
@@ -64,6 +65,7 @@
             &.@{namespace}--custom {
                 background: none;
                 border: none;
+                color: var(--pk-checkbox-active-background);
             }
         }
     }
