--- a/packages/mobile/src/toast/src/toast.less
+++ b/packages/mobile/src/toast/src/toast.less
@@ -3,7 +3,7 @@
     --pk-toast-position-top-distance: 5%;
     --pk-toast-position-bottom-distance: 5%;
     --pk-toast-background: var(--pk-toast-bg-color);
-    --pk-toast-padding-s: var(--pk-padding-s);
+    --pk-toast-padding-m: var(--pk-padding-m);
     --pk-toast-padding-l: var(--pk-padding-l);
     --pk-toast-border-radius: var(--pk-radius-m);
     --pk-toast-font-size: var(--pk-font-size-xs);
@@ -14,7 +14,7 @@
 .@{namespace} {
     position: fixed;
     background: var(--pk-toast-background);
-    padding: var(--pk-toast-padding-s) var(--pk-toast-padding-l);
+    padding: var(--pk-toast-padding-m) var(--pk-toast-padding-l);
     border-radius: var(--pk-toast-border-radius);
     left: 50%;
     transform: translateX(-50%);
