✨ feat: Badge组件支持单独使用

--- a/packages/mobile/src/badge/src/badge.less
+++ b/packages/mobile/src/badge/src/badge.less
@@ -14,10 +14,14 @@
     display: inline-block;
     position: relative;
 
+
+
     &__wrapper {
-        position: absolute;
-        top: 0;
-        right: 0;
+        &.@{namespace}--default {
+            position: absolute;
+            top: 0;
+            right: 0;
+        }
 
         .@{namespace}__content {
             transform: translate(var(--pk-badge-padding-horizontal), -50%);
