🎈 perf: 组件样式优化

--- a/packages/mobile/src/action-sheet/src/action-sheet.less
+++ b/packages/mobile/src/action-sheet/src/action-sheet.less
@@ -70,6 +70,7 @@
             border-radius: inherit;
             opacity: 0.05;
             z-index: var(--pk-button-z-index-mask);
+            pointer-events: none;
         }
 
         &.@{namespace}--loading {
