--- a/packages/mobile/src/button/src/button.less
+++ b/packages/mobile/src/button/src/button.less
@@ -38,6 +38,7 @@
         opacity: 0;
         content: ' ';
         z-index: var(--pk-button-z-index-mask);
+        pointer-events: none;
     }
 
     &:active::after {
@@ -99,6 +100,7 @@
             top: 0;
             left: 0;
             border-radius: inherit;
+            pointer-events: none;
         }
     }
 
