--- a/packages/mobile/src/cell/src/cell.less
+++ b/packages/mobile/src/cell/src/cell.less
@@ -50,6 +50,7 @@
             border-radius: inherit;
             opacity: 0.05;
             z-index: var(--pk-z-index-min-2);
+            pointer-events: none;
         }
     }
 
