--- a/packages/mobile/src/tag/src/tag.less
+++ b/packages/mobile/src/tag/src/tag.less
@@ -88,6 +88,7 @@
             top: 0;
             left: 0;
             border-radius: inherit;
+            pointer-events: none;
         }
 
     }
